# CodeBall

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
benches/: arena.rs  my_strategy_impl.rs  simulator.rs
etc/: config.json  max.options_index.json  weights.options_index.json
scripts/: check_goalkeeper_report.py  filter_simulations.py  game_report.py  join_simulations.py  optimal_action_stats_report.py  optimize_config.py  profile_report.py  release.sh  results_stats.py  run_demo.sh  run_for_optimization_vs_helper.sh  run_for_optimization_vs_my.sh  run_test.sh  run_test_with_lock.sh  run_vs_helper.sh  site_report.py  stats_report.py  time_stats.py
src/: action.rs  arena.rs  ball.rs  common.rs  config.rs  entity.rs  examples.rs  game.rs  history.rs  kick.rs  lib.rs  line2.rs  main.rs  mat3.rs  model  my_forward_strategy_impl.rs  my_goalkeeper_strategy_impl.rs  my_strategy.rs  my_strategy_impl.rs  nitro_pack.rs  optimal_action.rs  optimization.rs  orders.rs  physics.rs  plan.rs  plane.rs  player.rs  profiler.rs  random.rs  remote_process_client.rs  render.rs  robot.rs  roles.rs  rules.rs  scenarios.rs  search.rs  simulation_tool.rs  simulator.rs  solid.rs  sphere.rs  (+6 more)
src/tests/: arena.rs  mod.rs  optimal_action.rs  simulator.rs  world.rs
tests/: arena.rs  kick.rs  line2.rs  mat3.rs  my_strategy_impl.rs  optimal_action.rs  orders.rs  physics.rs  rules.rs  scenarios.rs  simulator.rs  vec3.rs
