[package]
name = "my-strategy"
version = "1.0.0"
edition = "2018"

[lib]
name = "my_strategy"
edition = "2018"

[[bin]]
name = "repeater"
edition = "2018"
path = "src/repeater.rs"

[[bin]]
name = "simulation_tool"
edition = "2018"
path = "src/simulation_tool.rs"

[dependencies]
log = "0.4.6"
env_logger = "0.6.0"
serde = "1"
serde_json = "1"
serde_derive = "1"
criterion = "0.2.5"

[features]
enable_log = []
enable_stats = []
enable_render = []
enable_time = []
enable_profiler = []
use_test_strategy = []
use_limited_forward = []
use_single_goalkeeper = []
disable_output = []
read_config = []

[[bench]]
name = "simulator"
harness = false

[[bench]]
name = "arena"
harness = false

[[bench]]
name = "my_strategy_impl"
harness = false

[profile.release]
debug = true
